--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
          class="imagen"
          src="https://www.adslzone.net/app/uploads-adslzone.net/2019/07/image.psd175-930x523.jpg"
          width="400" height="400"></a></div>
-<div style="padding: 10px; float: left; width: 45%; text-align: center;">
+
+<div style="padding: 10px; float: right; width: 45%; text-align: center;">
   <a
     href="EncuestasMVP2526.html"
     target="_blank">
@@ -77,6 +78,7 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
          class="imagen"
          src="https://imgs.search.brave.com/UhxafFU6jXg4s8aRfjFcItjVR_hFF4lLTOiLSbrPEuY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90My5m/dGNkbi5uZXQvanBn/LzA1LzI3LzkzLzEy/LzM2MF9GXzUyNzkz/MTI1Ml9mTGZ0U2NL/Q2hRbXlYVmJTRTho/QzhPU2RCV3VicHNU/Si5qcGc"
          width="400" height="400"></a></div>
+  
 <br>
 <a
   href="StatsTemp25-26.html"
@@ -85,14 +87,15 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
     <ins><em>Stats Temp. 25/26</em></ins>
   </div>
 </a>
-<a
+
+  <a
   href="EncuestasMVP2526.html"
   target="_blank">
-  <div style="padding: 10px; float: left; width: 45%; text-align: center; color: black">
-    <ins><em>Encuestas MVP 25/26</em></ins>
-  </div>
+  <div style="padding: 10px; float: right; width: 45%; text-align: center; color: black">
+    <em>
+      <ins>Encuestas MVP 25/26</ins>
+    </em></div>
 </a>
-
 
 <div style="padding: 10px; width: 45%; margin: 0 auto; text-align: center;">
   <a
