--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1 style="font-size:300%;background-color:rgba(106,90,205,0);text-align: center;
 font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
   <strong>   E.F.M.O. Boadilla 'B'</strong></h1>
-<p style="text-align: justify; margin: 50px;">
+<p style="text-align: center; margin: 50px;">
   Bienvenido a la página web sobre el E.F.M.O. Boadilla 'B', donde la pasión por el fútbol se une a la amistad. Aquí encontrarás todo sobre nuestro equipo, desde nuestras últimas hazañas en el campo hasta las estadísticas que vamos conformando. ¡Disfrutemos juntos de esta gran aventura!</p>
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
