--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -163,7 +163,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player4')" id="player4-item">
-      <div class="player-name">Álvaro G.S.</div>
+      <div class="player-name">Infante</div>
       <div class="player-stats" id="player4-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -175,7 +175,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player5')" id="player5-item">
-      <div class="player-name">Erik</div>
+      <div class="player-name">Jacobo</div>
       <div class="player-stats" id="player5-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -187,7 +187,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player6')" id="player6-item">
-      <div class="player-name">José An</div>
+      <div class="player-name">Rafa Crooke</div>
       <div class="player-stats" id="player6-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -199,7 +199,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player7')" id="player7-item">
-      <div class="player-name">Carlos A</div>
+      <div class="player-name">Rodri</div>
       <div class="player-stats" id="player7-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -211,7 +211,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player8')" id="player8-item">
-      <div class="player-name">Carlacas</div>
+      <div class="player-name">Adriano</div>
       <div class="player-stats" id="player8-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -223,7 +223,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player9')" id="player9-item">
-      <div class="player-name">Dani</div>
+      <div class="player-name">Alfonso</div>
       <div class="player-stats" id="player9-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -235,7 +235,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player10')" id="player10-item">
-      <div class="player-name">Agustín</div>
+      <div class="player-name">Zarcero</div>
       <div class="player-stats" id="player10-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -246,20 +246,8 @@
       </div>
     </li>
 
-    <li class="player-item" onclick="toggleDetails('player26')" id="player26-item">
-      <div class="player-name">Juan Pablo</div>
-      <div class="player-stats" id="player26-stats">
-        <!-- Se mostrarán las últimas 3 puntuaciones -->
-      </div>
-      <div class="total-points" id="player26-total">Total: 0 puntos - Media: 0.00</div>
-      <div id="player26" class="player-details">
-        <h3>Puntuaciones Detalladas</h3>
-        <!-- Aquí se mostrarán todas las puntuaciones -->
-      </div>
-    </li>
-
     <li class="player-item" onclick="toggleDetails('player11')" id="player11-item">
-      <div class="player-name">Madero</div>
+      <div class="player-name">Luisja</div>
       <div class="player-stats" id="player11-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -271,7 +259,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player12')" id="player12-item">
-      <div class="player-name">Sagi</div>
+      <div class="player-name">Víctor Jaén</div>
       <div class="player-stats" id="player12-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -283,7 +271,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player13')" id="player13-item">
-      <div class="player-name">Gárate</div>
+      <div class="player-name">Mario</div>
       <div class="player-stats" id="player13-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -295,7 +283,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player14')" id="player14-item">
-      <div class="player-name">Adri</div>
+      <div class="player-name">Pablo</div>
       <div class="player-stats" id="player14-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -307,7 +295,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player15')" id="player15-item">
-      <div class="player-name">Martín</div>
+      <div class="player-name">Brito</div>
       <div class="player-stats" id="player15-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -319,7 +307,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player16')" id="player16-item">
-      <div class="player-name">Mario Perea</div>
+      <div class="player-name">Kito</div>
       <div class="player-stats" id="player16-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -331,7 +319,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player17')" id="player17-item">
-      <div class="player-name">Alvarito</div>
+      <div class="player-name">Javi Pardo</div>
       <div class="player-stats" id="player17-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -343,7 +331,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player18')" id="player18-item">
-      <div class="player-name">Mario</div>
+      <div class="player-name">Ogayar</div>
       <div class="player-stats" id="player18-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -355,7 +343,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player19')" id="player19-item">
-      <div class="player-name">Jaime</div>
+      <div class="player-name">Panizo</div>
       <div class="player-stats" id="player19-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -367,7 +355,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player20')" id="player20-item">
-      <div class="player-name">Fer</div>
+      <div class="player-name">Manu Medina</div>
       <div class="player-stats" id="player20-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -379,7 +367,7 @@
     </li>
 
     <li class="player-item" onclick="toggleDetails('player21')" id="player21-item">
-      <div class="player-name">Elo</div>
+      <div class="player-name">Martínez</div>
       <div class="player-stats" id="player21-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -390,7 +378,7 @@
       </div>
     </li>
     <li class="player-item" onclick="toggleDetails('player22')" id="player22-item">
-      <div class="player-name">David</div>
+      <div class="player-name">Lucas Lausín</div>
       <div class="player-stats" id="player22-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -401,7 +389,7 @@
       </div>
     </li>
     <li class="player-item" onclick="toggleDetails('player23')" id="player23-item">
-      <div class="player-name">Edu (CD)</div>
+      <div class="player-name">Griñán</div>
       <div class="player-stats" id="player23-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -412,7 +400,7 @@
       </div>
     </li>
     <li class="player-item" onclick="toggleDetails('player24')" id="player24-item">
-      <div class="player-name">Joaquín (CB)</div>
+      <div class="player-name">Manu de Vicente</div>
       <div class="player-stats" id="player24-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -422,13 +410,28 @@
         <!-- Aquí se mostrarán todas las puntuaciones -->
       </div>
     </li>
+    <!--
     <li class="player-item" onclick="toggleDetails('player25')" id="player25-item">
       <div class="player-name">Kebe (CB)</div>
       <div class="player-stats" id="player25-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
+  <!--
       <div class="total-points" id="player25-total">Total: 0 puntos - Media: 0.00</div>
       <div id="player25" class="player-details">
+        <h3>Puntuaciones Detalladas</h3>
+        <!-- Aquí se mostrarán todas las puntuaciones -->
+      </div>
+  <!--
+    </li>
+    <li class="player-item" onclick="toggleDetails('player26')" id="player26-item">
+      <div class="player-name">AAA</div>
+      <div class="player-stats" id="player26-stats">
+        <!-- Se mostrarán las últimas 3 puntuaciones -->
+      </div>
+  <!--
+      <div class="total-points" id="player26-total">Total: 0 puntos - Media: 0.00</div>
+      <div id="player26" class="player-details">
         <h3>Puntuaciones Detalladas</h3>
         <!-- Aquí se mostrarán todas las puntuaciones -->
       </div>
@@ -540,17 +543,6 @@
     {
       id: 'player10',
       name: 'Agustín',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player26',
-      name: 'Juan Pablo',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -693,7 +685,7 @@
     },
     {
       id: 'player23',
-      name: 'Edu (CD)',
+      name: 'Griñán',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -704,7 +696,7 @@
     },
     {
       id: 'player24',
-      name: 'Joaquín (CB)',
+      name: 'Manu de Vicente',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -716,6 +708,17 @@
     {
       id: 'player25',
       name: 'Kebe (CB)',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player26',
+      name: 'Juan Pablo',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
