--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -412,7 +412,7 @@
     </li>
     <!--
     <li class="player-item" onclick="toggleDetails('player25')" id="player25-item">
-      <div class="player-name">Kebe (CB)</div>
+      <div class="player-name">AAA</div>
       <div class="player-stats" id="player25-stats">
         <!-- Se mostrarán las últimas 3 puntuaciones -->
       </div>
@@ -476,7 +476,7 @@
     },
     {
       id: 'player4',
-      name: 'Álvaro G.S.',
+      name: 'Infante',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -487,7 +487,7 @@
     },
     {
       id: 'player5',
-      name: 'Erik',
+      name: 'Jacobo',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -498,7 +498,7 @@
     },
     {
       id: 'player6',
-      name: 'José An',
+      name: 'Rafa Crooke',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -509,7 +509,7 @@
     },
     {
       id: 'player7',
-      name: 'Carlos A',
+      name: 'Rodri',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -520,7 +520,7 @@
     },
     {
       id: 'player8',
-      name: 'Carlacas',
+      name: 'Adriano',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -531,7 +531,7 @@
     },
     {
       id: 'player9',
-      name: 'Dani',
+      name: 'Alfonso',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -542,7 +542,7 @@
     },
     {
       id: 'player10',
-      name: 'Agustín',
+      name: 'Zarcero',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -553,7 +553,7 @@
     },
     {
       id: 'player11',
-      name: 'Madero',
+      name: 'Luisja',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -564,7 +564,7 @@
     },
     {
       id: 'player12',
-      name: 'Sagi',
+      name: 'Víctor Jaén',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -575,61 +575,6 @@
     },
     {
       id: 'player13',
-      name: 'Gárate',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player14',
-      name: 'Adri',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player15',
-      name: 'Martín',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player16',
-      name: 'Mario Perea',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player17',
-      name: 'Alvarito',
-      scores: [null, null, null],
-      comments: [
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-",
-        "-", "-", "-", "-", "-",  "-"
-      ]
-    },
-    {
-      id: 'player18',
       name: 'Mario',
       scores: [null, null, null],
       comments: [
@@ -640,8 +585,63 @@
       ]
     },
     {
+      id: 'player14',
+      name: 'Pablo',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player15',
+      name: 'Brito',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player16',
+      name: 'Kito',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player17',
+      name: 'Javi Pardo',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
+      id: 'player18',
+      name: 'Ogayar',
+      scores: [null, null, null],
+      comments: [
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-",
+        "-", "-", "-", "-", "-",  "-"
+      ]
+    },
+    {
       id: 'player19',
-      name: 'Jaime',
+      name: 'Panizo',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -652,7 +652,7 @@
     },
     {
       id: 'player20',
-      name: 'Fer',
+      name: 'Manu Medina',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -663,7 +663,7 @@
     },
     {
       id: 'player21',
-      name: 'Elo',
+      name: 'Martínez',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -674,7 +674,7 @@
     },
     {
       id: 'player22',
-      name: 'David',
+      name: 'Lucas Lausín',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -707,7 +707,7 @@
     },
     {
       id: 'player25',
-      name: 'Kebe (CB)',
+      name: 'AAA',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
@@ -718,7 +718,7 @@
     },
     {
       id: 'player26',
-      name: 'Juan Pablo',
+      name: 'AAA',
       scores: [null, null, null],
       comments: [
         "-", "-", "-", "-", "-",  "-",
