--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <h1 class="title">Fantasy EFMO</h1>
+  <title>Fantasy EFMO</title>
   <style>
     body {
       font-family: Arial, sans-serif;
