--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -16,17 +16,15 @@
   text-align: center;
   font-size: 48px;
   font-weight: 800;
-  color: #007b83; /* Verde azulado elegante */
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  background: linear-gradient(90deg, #00c6ff, #0072ff); /* Degradado azul */
+  background: linear-gradient(90deg, #f4c542, #d97d0d); /* Dorado a naranja */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: fadeIn 2s ease-in-out;
 }
 
-/* Animación de aparición suave */
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -37,6 +35,7 @@
     transform: translateY(0);
   }
 }
+
     
     .container {
       width: 80%;
