--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -150,7 +150,7 @@
 <body>
 
 <div class="container">
-  <h1>Fantasy EFMO</h1>
+  <h1 class="title">Fantasy EFMO</h1>
   <ul class="player-list">
     <li class="player-item" onclick="toggleDetails('player1')" id="player1-item">
       <div class="player-name">Agudo</div>
