--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,23 +19,16 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  background: linear-gradient(90deg, #f4c542, #d97d0d); /* Dorado a naranja */
+  background: linear-gradient(90deg, #ffd700, #ffae42); /* Dorado brillante a ámbar */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: fadeIn 2s ease-in-out;
+  animation: fadeIn 1.5s ease-in-out;
 }
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+  from { opacity: 0; transform: translateY(-20px); }
+  to { opacity: 1; transform: translateY(0); }
 }
-
     
     .container {
       width: 80%;
