--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  background: linear-gradient(90deg, #ffd700, #ffae42); /* Dorado brillante a ámbar */
+  background: linear-gradient(90deg, #fff5a3, #ffe066, #ffd700); /* Amarillo claro → dorado puro */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: fadeIn 1.5s ease-in-out;
