--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,9 +19,8 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  background: linear-gradient(90deg, #fff5a3, #ffe066, #ffd700); /* Amarillo claro → dorado puro */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #ffd700; /* Dorado puro */
+  text-shadow: 0 0 8px rgba(255, 215, 0, 0.6); /* Brillo suave */
   animation: fadeIn 1.5s ease-in-out;
 }
 
