--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,8 +19,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #ffd700; /* Dorado puro */
-  text-shadow: 0 0 8px rgba(255, 215, 0, 0.6); /* Brillo suave */
+  color: #FFD700; /* Dorado fijo */
   animation: fadeIn 1.5s ease-in-out;
 }
 
