--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #FFD700; /* Dorado fijo */
+  color: #FFBFA3; /* Mezcla suave entre rojo y blanco */
   animation: fadeIn 1.5s ease-in-out;
 }
 
