--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #FFBFA3; /* Mezcla suave entre rojo y blanco */
+  color: #FF6347; /* Rojo-anaranjado fuerte tipo “Tomato” */
   animation: fadeIn 1.5s ease-in-out;
 }
 
@@ -27,6 +27,7 @@
   from { opacity: 0; transform: translateY(-20px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
     
     .container {
       width: 80%;
