--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #FFC107;
+  color: #FFD700;
   animation: fadeIn 1.5s ease-in-out;
 }
 
