--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,7 +19,12 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #FFF176;
+  color: #FFD700; /* Dorado puro */
+  text-shadow: 
+    0 0 5px #FFD700,   /* primer resplandor */
+    0 0 10px #FFEA00,  /* segundo resplandor más brillante */
+    0 0 15px #FFE135,  /* tercer resplandor más intenso */
+    0 0 20px #FFF176;  /* resplandor difuso más grande */
   animation: fadeIn 1.5s ease-in-out;
 }
 
@@ -27,6 +32,7 @@
   from { opacity: 0; transform: translateY(-20px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
 
     
     .container {
