--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,12 +19,11 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #FFD700; /* Dorado puro */
+  color: #FFE033; /* Dorado brillante y luminoso */
   text-shadow: 
-    0 0 5px #FFD700,   /* primer resplandor */
-    0 0 10px #FFEA00,  /* segundo resplandor más brillante */
-    0 0 15px #FFE135,  /* tercer resplandor más intenso */
-    0 0 20px #FFF176;  /* resplandor difuso más grande */
+    0 0 2px #FFFACD,  /* brillo cercano y concentrado */
+    0 0 4px #FFFACD, 
+    0 0 6px #FFF8B0;  /* brillo un poco más amplio pero todavía concentrado */
   animation: fadeIn 1.5s ease-in-out;
 }
 
@@ -32,6 +31,7 @@
   from { opacity: 0; transform: translateY(-20px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
 
 
     
