--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,21 +19,29 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #FFE033; /* Dorado brillante y luminoso */
+  color: #FFE033; /* Dorado brillante */
   text-shadow: 
-    0 0 2px #FFFACD,  /* brillo cercano y concentrado */
-    0 0 4px #FFFACD, 
-    0 0 6px #FFF8B0;  /* brillo un poco más amplio pero todavía concentrado */
+    0 0 2px #FFFACD,
+    0 0 4px #FFFACD,
+    0 0 6px #FFF8B0;
   animation: fadeIn 1.5s ease-in-out;
+}
+
+/* Ajuste para móviles */
+@media (max-width: 768px) {
+  .title {
+    font-size: 40px; /* Ajusta tamaño si quieres */
+    text-shadow: 
+      0 0 3px #FFFACD,
+      0 0 6px #FFFACD,
+      0 0 10px #FFF8B0; /* Brillo más grande y visible */
+  }
 }
 
 @keyframes fadeIn {
   from { opacity: 0; transform: translateY(-20px); }
   to { opacity: 1; transform: translateY(0); }
 }
-
-
-
     
     .container {
       width: 80%;
