--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,22 +19,15 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #FFE033; /* Dorado brillante */
-  text-shadow: 
-    0 0 2px #FFFACD,
-    0 0 4px #FFFACD,
-    0 0 6px #FFF8B0;
+  color: #FFE033; /* Dorado brillante fijo */
   animation: fadeIn 1.5s ease-in-out;
 }
 
 /* Ajuste para móviles */
 @media (max-width: 768px) {
   .title {
-    font-size: 40px; /* Ajusta tamaño si quieres */
-    text-shadow: 
-      0 0 3px #FFFACD,
-      0 0 6px #FFFACD,
-      0 0 10px #FFF8B0; /* Brillo más grande y visible */
+    font-size: 40px; /* Ajuste de tamaño opcional */
+    color: #FFE033; /* Mantiene mismo dorado brillante */
   }
 }
 
@@ -42,6 +35,7 @@
   from { opacity: 0; transform: translateY(-20px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
     
     .container {
       width: 80%;
