--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -119,30 +119,27 @@
     {nombre: "Agudo", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Gabri", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Álvaro G.S.", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Erik", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "José An", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Carlos A", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Carlacas", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Dani", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Agustín", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Juan Pablo", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Madero", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Sagi", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Gárate", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Adri", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Martín", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Mario Perea", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Alvarito", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Infante", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Rodri", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Adriano", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Alfonso", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Mario", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Jaime", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Fer", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Elo", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "David", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Jorge (CD)", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Edu (CD)", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Joaquín (CB)", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Kebe (CB)", goles: 0, asistencias: 0, minutos: []}
+    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Brito", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Kito", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Panizo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Martínez", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Griñán", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Manu de Vicente", goles: 0, asistencias: 0, minutos: []}
   ];
 
   // Generar las tarjetas de los jugadores
