--- a/FantasyEFMO.html
+++ b/FantasyEFMO.html
@@ -19,16 +19,8 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #FFE033; /* Dorado brillante fijo */
+  color: #20B2AA;
   animation: fadeIn 1.5s ease-in-out;
-}
-
-/* Ajuste para móviles */
-@media (max-width: 768px) {
-  .title {
-    font-size: 40px; /* Ajuste de tamaño opcional */
-    color: #FFE033; /* Mantiene mismo dorado brillante */
-  }
 }
 
 @keyframes fadeIn {
