--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -38,7 +38,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #e9fafa;
+  color: rgb(112, 128, 144);
   animation: fadeIn 1.5s ease-in-out;
 }
 
