--- a/InformesPost-partido.html
+++ b/InformesPost-partido.html
@@ -16,11 +16,26 @@
       font-size: 25px;
       color: black;
     }
+    .title {
+  text-align: center;
+  font-size: 48px;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-bottom: 30px;
+  color: #20B2AA;
+  animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
   </style>
 </head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body>
-<h2 style="text-align: center;">Informes post-partido 25/26</h2>
+<h1 style="text-align: center; color = rgb(255, 215, 0); ">Informes post-partido 25/26</h1>
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
