--- a/InformesPost-partido.html
+++ b/InformesPost-partido.html
@@ -35,7 +35,7 @@
 </head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body>
-<h1 style="text-align: center; color = rgb(255, 215, 0); ">Informes post-partido 25/26</h1>
+<h1 class= title; style="text-align: center; color = rgb(255, 215, 0); ">Informes post-partido 25/26</h1>
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
