--- a/InformesPost-partido.html
+++ b/InformesPost-partido.html
@@ -37,7 +37,7 @@
 </head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body>
-<h1 class= title; style="text-align: center; ">Informes post-partido 25/26</h1>
+<h1 class= "title">Informes post-partido 25/26</h1>
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
