--- a/InformesPost-partido.html
+++ b/InformesPost-partido.html
@@ -24,7 +24,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #ADFF2F;
+  color: #FFDEAD;
   animation: fadeIn 1.5s ease-in-out;
 }
 
