--- a/EncuestasMVP2526.html
+++ b/EncuestasMVP2526.html
@@ -21,11 +21,26 @@
       font-size: 25px;
       color: black;
     }
+    .title {
+  text-align: center;
+  font-size: 48px;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  margin-bottom: 30px;
+  color: #20B2AA;
+  animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
   </style>
 </head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body>
-  <h2 style="text-align: center;">Encuestas MVP 25/26</h2>
+  <h2 style="title">Encuestas MVP 25/26</h2>
 
   <div style="padding: 10px; float: left; width: 45%; text-align: center;">
     <a
