--- a/EncuestasMVP2526.html
+++ b/EncuestasMVP2526.html
@@ -28,7 +28,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #20B2AA;
+  color: #FFDEAD;
   animation: fadeIn 1.5s ease-in-out;
 }
 
@@ -40,7 +40,7 @@
 </head>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body>
-  <h2 style="title">Encuestas MVP 25/26</h2>
+  <h1 class= "title">Encuestas MVP 25/26</h1>
 
   <div style="padding: 10px; float: left; width: 45%; text-align: center;">
     <a
