--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -38,7 +38,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-bottom: 30px;
-  color: #32CD32;
+  color: #98FB98;
   animation: fadeIn 1.5s ease-in-out;
 }
 
