--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     img {
       border-radius: 200px 200px 200px 200px;
-      border: solid blue 5px;
+      border: light blue 5px;
     }
 
     body {
