--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
 
 
 <a
-  href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n3.0.html"
+  href="Simbolog%C3%ADaYSistemaDePuntuaci%C3%B3n.html"
   target="_blank">
   <div style="padding: 10px; width: 45%; margin: 0 auto; text-align: center; color: black;">
     <ins><em>Simbología y sistema de puntuación</em></ins>
