--- a/EncuestasMVP2526.html
+++ b/EncuestasMVP2526.html
@@ -12,7 +12,7 @@
   <style>
     img {
       border-radius: 0;
-      border: solid purple 5px;
+      border: solid #FFDEAD 5px;
     }
 
     body {
