--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -20,7 +20,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simbología y sistema de puntuación</title>
+  <h1 class= "title">Simbología y sistema de puntuación</h1>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
