--- a/InformesPost-partido.html
+++ b/InformesPost-partido.html
@@ -7,7 +7,7 @@
   <style>
     img {
       border-radius: 0;
-      border: solid purple 5px;
+      border: solid #C0C0C0 5px;
     }
 
     body {
