--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -20,13 +20,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <h1 class= "title">Simbología y sistema de puntuación</h1>
+  <title>Simbología y sistema de puntuación</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
   <div class="max-w-5xl mx-auto p-6">
-    <h1 class="text-3xl font-bold text-center mb-8">Simbología y sistema de puntuación</h1>
+    <h1 class="title">Simbología y sistema de puntuación</h1>
 
     <!-- Simbología -->
     <section class="mb-10 text-center">
