--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
   <strong>   E.F.M.O. Boadilla 'B'</strong></h1>
 <p style="text-align: center; margin: 50px;">
-  Bienvenido a la página web sobre el E.F.M.O. Boadilla 'B', donde la pasión por el fútbol se une a la amistad. Aquí encontrarás todo sobre nuestro equipo, desde nuestras últimas hazañas en el campo hasta las estadísticas que vamos conformando. ¡Disfrutemos juntos de esta gran aventura!</p>
+  Bienvenido a la página web sobre el E.F.M.O. Boadilla 'B', donde la pasión por el fútbol se vive en equipo. Aquí encontrarás las estadísticas que vamos acumulando y mucho más, ¡disfrutemos juntos de esta gran aventura!</p>
 
 <div style="padding: 10px; float: left; width: 45%; text-align: center;">
   <a
@@ -123,6 +123,6 @@ font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
 <hr>
 Creador de la página web:
 <br>
-Gabriel Veiga
+Gabriel Veiga Álvarez
 </body>
 </html>
