--- a/index.html
+++ b/index.html
@@ -3,25 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <title>E.F.M.O. Boadilla 'B'</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
     img {
-      border-radius: 200px 200px 200px 200px;
+      border-radius: 200px;
       border: solid rgb(0, 255, 255) 5px;
     }
 
     body {
       background-color: rgb(233, 255, 255);
-      font-family: "Trebuchet MS",sans-serif;
+      font-family: "Trebuchet MS", sans-serif;
       font-size: 25px;
       color: black;
     }
+
+    .title {
+      font-size: 300%;
+      background-color: rgba(106,90,205,0);
+      text-align: center;
+      font-family: Oswald, fantasy;
+      font-weight: bold;
+    }
+
+    /* Alternar colores rojo y blanco */
+    .title span:nth-child(odd) {
+      color: hsl(0, 90%, 55%);
+    }
+
+    .title span:nth-child(even) {
+      color: white;
+    }
   </style>
 </head>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <body>
-<h1 style="font-size:300%;background-color:rgba(106,90,205,0);text-align: center;
-font-family: Oswald,fantasy; ; color: hsl(0, 90%, 55%);">
-  <strong>   E.F.M.O. Boadilla 'B'</strong></h1>
+  <h1 class="title">
+    <span>E</span><span>.</span><span>F</span><span>.</span><span>M</span><span>.</span><span>O</span>
+    <span> </span>
+    <span>B</span><span>o</span><span>a</span><span>d</span><span>i</span><span>l</span><span>l</span><span>a</span>
+    <span> </span>
+    <span>'</span><span>B</span><span>'</span>
+  </h1>
 <p style="text-align: center; margin: 50px;">
   Bienvenido a la página web sobre el E.F.M.O. Boadilla 'B', donde la pasión por el fútbol se vive en equipo. Aquí encontrarás las estadísticas que vamos acumulando y mucho más, ¡disfrutemos juntos de esta gran aventura!</p>
 
