--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
       font-family: "Trebuchet MS", sans-serif;
       font-size: 25px;
       color: black;
+      margin: 0;
+      padding: 0;
+    }
+
+    .title-container {
+      background-color: #1a237e; /* azul oscuro */
+      padding: 20px 40px;
+      text-align: center;
+      border-radius: 15px;
+      display: inline-block;
+      margin: 30px auto;
     }
 
     .title {
       font-size: 300%;
-      background-color: rgba(106,90,205,0);
-      text-align: center;
       font-family: Oswald, fantasy;
       font-weight: bold;
+      margin: 0;
     }
 
     /* Alternar colores rojo y blanco */
@@ -36,13 +46,15 @@
   </style>
 </head>
 <body>
-  <h1 class="title">
-    <span>E</span><span>.</span><span>F</span><span>.</span><span>M</span><span>.</span><span>O</span>
-    <span> </span>
-    <span>B</span><span>o</span><span>a</span><span>d</span><span>i</span><span>l</span><span>l</span><span>a</span>
-    <span> </span>
-    <span>'</span><span>B</span><span>'</span>
-  </h1>
+  <div class="title-container">
+    <h1 class="title">
+      <span>E</span><span>.</span><span>F</span><span>.</span><span>M</span><span>.</span><span>O</span>
+      <span> </span>
+      <span>B</span><span>o</span><span>a</span><span>d</span><span>i</span><span>l</span><span>l</span><span>a</span>
+      <span> </span>
+      <span>'</span><span>B</span><span>'</span>
+    </h1>
+  </div>
 <p style="text-align: center; margin: 50px;">
   Bienvenido a la página web sobre el E.F.M.O. Boadilla 'B', donde la pasión por el fútbol se vive en equipo. Aquí encontrarás las estadísticas que vamos acumulando y mucho más, ¡disfrutemos juntos de esta gran aventura!</p>
 
