--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 <body>
   <div class="title-container">
     <h1 class="title">
-      <span>E</span><span>.</span><span>F</span><span>.</span><span>M</span><span>.</span><span>O</span>
-      <span> </span>
+      <span>E.</span><span>F.</span><span>M.</span><span>O.</span>
       <span>B</span><span>o</span><span>a</span><span>d</span><span>i</span><span>l</span><span>l</span><span>a</span>
       <span> </span>
       <span>'</span><span>B</span><span>'</span>
