--- a/SimbologíaYSistemaDePuntuación.html
+++ b/SimbologíaYSistemaDePuntuación.html
@@ -40,8 +40,8 @@
         <div class="p-4 bg-white rounded-2xl shadow text-center">🟢⬆️<br><span class="text-sm">Gol penalti</span></div>
         <div class="p-4 bg-white rounded-2xl shadow text-center">🔴⬆️<br><span class="text-sm">Penalti fallado</span></div>
         <div class="p-4 bg-white rounded-2xl shadow text-center">🧤<br><span class="text-sm">Penalti parado</span></div>
-        <div class="p-4 bg-white rounded-2xl shadow text-center w-36">🔴<br><span class="text-sm">Autogol</span></div>
-        <div class="p-4 bg-white rounded-2xl shadow text-center w-36">🟥<br><span class="text-sm">Roja</span></div>
+        <div class="p-4 bg-white rounded-2xl shadow text-center">🔴<br><span class="text-sm">Autogol</span></div>
+        <div class="p-4 bg-white rounded-2xl shadow text-center">🟥<br><span class="text-sm">Roja</span></div>
         </div>
       </div>
     </section>
