--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       margin: 0;
       padding: 0;
     }
-
+  
     .title-container {
-      background-color: #1a237e; /* azul oscuro */
-      padding: 20px 40px;
-      text-align: center;
-      border-radius: 15px;
-      display: inline-block;
-      margin: 30px auto;
-    }
+  width: fit-content;   /* el ancho se ajusta al contenido */
+  margin: 30px auto;    /* centrado horizontal */
+  display: block;       /* necesario para que margin auto funcione */
+  padding: 20px 40px;
+  border-radius: 15px;
+  background-color: #1a237e; /* tu color */
+}
 
     .title {
       font-size: 300%;
