--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   display: block;       /* necesario para que margin auto funcione */
   padding: 20px 40px;
   border-radius: 15px;
-  background-color: #20B2AA; /* tu color */
+  background-color: #20B2D2; /* tu color */
 }
 
     .title {
