--- a/StatsTemp25-26.html
+++ b/StatsTemp25-26.html
@@ -136,27 +136,28 @@
     {nombre: "Agudo", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Gabri", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Infante", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Martínez", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Rodri", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Adriano", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Alfonso", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Infante", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Molina", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Zarcero", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Luisja", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Mario", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Brito", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Kito", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Víctor Jaén", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Brito", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Pablo", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Javi Pardo", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Mario", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Ogayar", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Rodri de Castro", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Panizo", goles: 0, asistencias: 0, minutos: []},
     {nombre: "Manu Medina", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Martínez", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Lucas Lausín", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Griñán", goles: 0, asistencias: 0, minutos: []},
-    {nombre: "Manu de Vicente", goles: 0, asistencias: 0, minutos: []}
+    {nombre: "Manu de Vicente", goles: 0, asistencias: 0, minutos: []},
+    {nombre: "Griñán", goles: 0, asistencias: 0, minutos: []}
   ];
 
   // Generar las tarjetas de los jugadores
